--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="./css/nav.css" />
+        <link rel="stylesheet" href="css/nav.css" />
 
     
 
