--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./home.html" />
+    <meta http-equiv="refresh" content="0; url=home.html" />
   </head>
   <body></body>
 </html>
