--- a/signUp.html
+++ b/signUp.html
@@ -4,36 +4,34 @@
     <link rel="stylesheet" href="css/signUp.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/nav.css" />
-
   </head>
 
   <body>
     <nav>
-        <div class="container">
-            
-
-                <div class="logo"><span>E</span>Shop</div>
-                <ul class="nav-list">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li class="log-in"><a href="login.html">Log in</a></li>
-                <li>
-                        <a href="cart.html" class="cart-box">
-                         <span class="cart-icon">
-                             <i class="fa-solid fa-cart-shopping cart-icon"></i>
-                        </span>
-                        <span class="cart-counter">0</span>
-                    </a>
-                </li>
-                          <li>
-            <a href="wishlist.html" class="wishlist-box">
-                <span class="wishlist-icon"><i class="fa-solid fa-heart wishlist-icon"></i></span>
+      <div class="container">
+        <div class="logo"><span>E</span>Shop</div>
+        <ul class="nav-list">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li class="log-in"><a href="login.html">Log in</a></li>
+          <li>
+            <a href="cart.html" class="cart-box">
+              <span class="cart-icon">
+                <i class="fa-solid fa-cart-shopping cart-icon"></i>
+              </span>
+              <span class="cart-counter">0</span>
             </a>
           </li>
-            </ul>
-        </div>
+          <li>
+            <a href="wishlist.html" class="wishlist-box">
+              <span class="wishlist-icon"
+                ><i class="fa-solid fa-heart wishlist-icon"></i
+              ></span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
-
 
     <div class="sign-up-container">
       <h2>Create Account</h2>
@@ -73,8 +71,6 @@
       </form>
     </div>
 
-    <script src="./Javascript/signUp.js">
-      
-    </script>
+    <script src="Javascript/signUp.js"></script>
   </body>
 </html>
